[package]
name = "mempoolwatcher"
authors = ["Jrmmr <saucissefrite@pm.me>"]
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.72"
socket2 = "0.4.4"
serde = "1.0.131"
serde_derive = "1.0.131"
anyhow = "1.0.45"
